--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,10 @@ jobs:
         with:
           ruby-version: 3.0.2
           bundler-cache: true
-      - name: Run the default task
-        run: bundle exec rake
       - name: Rubocop Linter Action
         uses: andrewmcodes/rubocop-linter-action@v3.0.0.rc2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - run: make ci-setup
-      - run: make check
+      - run: make test
