--- a/test/fixtures/post/likes.yml
+++ b/test/fixtures/post/likes.yml
@@ -5,11 +5,15 @@
 # below each fixture, per the syntax in the comments below
 #
 one:
-  user_id: 1
-  post_id: 1
+  user: one
+  post: one
 # column: value
 #
 two:
-  user_id: 2
-  post_id: 2
+  user: two
+  post: two
+
+three:
+  user: two
+  post: one
 # column: value
