--- a/test/fixtures/post_categories.yml
+++ b/test/fixtures/post_categories.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+post_category_one:
   id: 1
   name: Education
 
-two:
+post_category_two:
   id: 2
   name: Science
