--- a/test/fixtures/post_comments.yml
+++ b/test/fixtures/post_comments.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+post_comment_one:
   content: MyText 1
-  user: one
-  post: one
+  user: user_one
+  post: post_one
 
-two:
+post_comment_two:
   content: MyText 2
-  user: two
-  post: two
+  user: user_two
+  post: post_two
