--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+post_one:
   id: 1
   title: Test Title 1
   body: Test Body 1
-  category_id: 1
-  creator_id: 1
+  post_category: post_category_one
+  creator: user_one
 
-two:
+post_two:
   id: 2
   title: Test Title 2
   body: Test Body 2
-  category_id: 2
-  creator_id: 2
+  post_category: post_category_two
+  creator: user_two
